# lmelp-mobile

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.export  README.md  mkdocs.yml  package.json  pyproject.toml  settings.gradle.kts
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: build-export-image.yml  ci.yml  docs.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
data/processed/: cover_report.html
docs/: .nav.yml  .pages  architecture.md  data-schema.md  index.md  visual-identity.md
docs/cheatsheets/: mkdocs.md
docs/claude/memory/: 260306-2115-fix-cancellation-exception.md  (+50 more)
docs/dev/: .nav.yml  .pages  README.md  android-auto.md  build_deploy_apk.md  data-schema.md  local-state-datastore.md  setup-mobile.md
docs/user/: .nav.yml  .pages  README.md  epingler_livres.md  mise_a_jour_episode.md  mon_palmares.md  partager_livre.md  vitesse_lecture.md
gradle/: libs.versions.toml
scripts/: .env.example  build.sh  check_covers.py  deploy.sh  docker_export_and_push.sh  export_mongo_to_sqlite.py  inspect_cover_cache.sh  lmelp-update-mobile.sh  test_export_import_speed.py
tests/: test_build_onkindle_table.py  test_date_lecture_extraction.py  test_fts5_accent_search.py  test_koreader_date_extraction.py  test_lmelp_db_integrity.py  test_normalize_title.py  test_svd_recommendations.py
ui/img/: critiques.avif
ui/sketchs/: #53.excalidraw  #59.excalidraw  #64.excalidraw  #68.excalidraw  bandeau.excalidraw
(+108 files in other folders)
