[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lmelp-mobile-scripts"
version = "0.1.0"
description = "Scripts for lmelp-mobile — MongoDB to SQLite export"
requires-python = ">=3.11"
dependencies = [
    "pymongo>=4.6",
    "numpy>=1.26",
    "scipy>=1.12",
    "click>=8.1",
]

[project.scripts]
export-to-sqlite = "scripts.export_mongo_to_sqlite:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "mypy>=1.8",
    "pytest>=8.0",
    "types-pymongo",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
